--- a/src/components/programming/projects/card.css
+++ b/src/components/programming/projects/card.css
@@ -1,24 +1,1 @@
-.nextjs { 
-      @apply group-has-[input[value="nextjs"]:checked]:outline-1 group-has-[input[value="nextjs"]:checked]:max-h-[40rem] group-has-[input[value="nextjs"]:checked]:max-w-[40rem] group-has-[input[value="nextjs"]:checked]:visible;
-    }
-.javascript { 
-      @apply group-has-[input[value="javascript"]:checked]:outline-1 group-has-[input[value="javascript"]:checked]:max-h-[40rem] group-has-[input[value="javascript"]:checked]:max-w-[40rem] group-has-[input[value="javascript"]:checked]:visible;
-    }
-.typescript { 
-      @apply group-has-[input[value="typescript"]:checked]:outline-1 group-has-[input[value="typescript"]:checked]:max-h-[40rem] group-has-[input[value="typescript"]:checked]:max-w-[40rem] group-has-[input[value="typescript"]:checked]:visible;
-    }
-.chrome { 
-      @apply group-has-[input[value="chrome"]:checked]:outline-1 group-has-[input[value="chrome"]:checked]:max-h-[40rem] group-has-[input[value="chrome"]:checked]:max-w-[40rem] group-has-[input[value="chrome"]:checked]:visible;
-    }
-.unity { 
-      @apply group-has-[input[value="unity"]:checked]:outline-1 group-has-[input[value="unity"]:checked]:max-h-[40rem] group-has-[input[value="unity"]:checked]:max-w-[40rem] group-has-[input[value="unity"]:checked]:visible;
-    }
-.cs { 
-      @apply group-has-[input[value="cs"]:checked]:outline-1 group-has-[input[value="cs"]:checked]:max-h-[40rem] group-has-[input[value="cs"]:checked]:max-w-[40rem] group-has-[input[value="cs"]:checked]:visible;
-    }
-.flask { 
-      @apply group-has-[input[value="flask"]:checked]:outline-1 group-has-[input[value="flask"]:checked]:max-h-[40rem] group-has-[input[value="flask"]:checked]:max-w-[40rem] group-has-[input[value="flask"]:checked]:visible;
-    }
-.sqlite3 { 
-      @apply group-has-[input[value="sqlite3"]:checked]:outline-1 group-has-[input[value="sqlite3"]:checked]:max-h-[40rem] group-has-[input[value="sqlite3"]:checked]:max-w-[40rem] group-has-[input[value="sqlite3"]:checked]:visible;
-    }
+.nextjs { @apply group-has-[input[value="nextjs"]:checked]:outline-1 group-has-[input[value="nextjs"]:checked]:max-h-[40rem] group-has-[input[value="nextjs"]:checked]:max-w-[40rem] group-has-[input[value="nextjs"]:checked]:visible group-has-[input[value="nextjs"]:checked]:opacity-100; }.javascript { @apply group-has-[input[value="javascript"]:checked]:outline-1 group-has-[input[value="javascript"]:checked]:max-h-[40rem] group-has-[input[value="javascript"]:checked]:max-w-[40rem] group-has-[input[value="javascript"]:checked]:visible group-has-[input[value="javascript"]:checked]:opacity-100; }.typescript { @apply group-has-[input[value="typescript"]:checked]:outline-1 group-has-[input[value="typescript"]:checked]:max-h-[40rem] group-has-[input[value="typescript"]:checked]:max-w-[40rem] group-has-[input[value="typescript"]:checked]:visible group-has-[input[value="typescript"]:checked]:opacity-100; }.chrome { @apply group-has-[input[value="chrome"]:checked]:outline-1 group-has-[input[value="chrome"]:checked]:max-h-[40rem] group-has-[input[value="chrome"]:checked]:max-w-[40rem] group-has-[input[value="chrome"]:checked]:visible group-has-[input[value="chrome"]:checked]:opacity-100; }.unity { @apply group-has-[input[value="unity"]:checked]:outline-1 group-has-[input[value="unity"]:checked]:max-h-[40rem] group-has-[input[value="unity"]:checked]:max-w-[40rem] group-has-[input[value="unity"]:checked]:visible group-has-[input[value="unity"]:checked]:opacity-100; }.cs { @apply group-has-[input[value="cs"]:checked]:outline-1 group-has-[input[value="cs"]:checked]:max-h-[40rem] group-has-[input[value="cs"]:checked]:max-w-[40rem] group-has-[input[value="cs"]:checked]:visible group-has-[input[value="cs"]:checked]:opacity-100; }.flask { @apply group-has-[input[value="flask"]:checked]:outline-1 group-has-[input[value="flask"]:checked]:max-h-[40rem] group-has-[input[value="flask"]:checked]:max-w-[40rem] group-has-[input[value="flask"]:checked]:visible group-has-[input[value="flask"]:checked]:opacity-100; }.sqlite3 { @apply group-has-[input[value="sqlite3"]:checked]:outline-1 group-has-[input[value="sqlite3"]:checked]:max-h-[40rem] group-has-[input[value="sqlite3"]:checked]:max-w-[40rem] group-has-[input[value="sqlite3"]:checked]:visible group-has-[input[value="sqlite3"]:checked]:opacity-100; }
