--- a/src/components/programming/projects/index.astro
+++ b/src/components/programming/projects/index.astro
@@ -88,7 +88,7 @@ const techs = [
       </label>
     </form>
   </div>
-  <div class="columns-1 gap-4 space-y-4 sm:columns-2 lg:columns-3">
+  <div class="columns-1 gap-4 sm:columns-2 lg:columns-3">
     {projects.map((project) => <ProjectCard project={project} />)}
   </div>
 </section>
