--- a/src/components/footer/index.astro
+++ b/src/components/footer/index.astro
@@ -11,7 +11,7 @@ const { footer } = getTranslations(lang)
 
 <SectionDivider />
 <footer
-  class="grid h-16 w-full max-w-[min(600px,100%,100vw)] grid-cols-3 place-items-center place-self-center"
+  class="grid h-16 w-full max-w-[min(600px,100%)] grid-cols-3 place-items-center place-self-center"
 >
   <a
     href={`/${lang === "ja" ? "en" : "ja"}`}
